<resources>
    <string name="app_name">Chat_App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="please_log_in">Please Log In</string>
    <string name="message">message:</string>
    <string name="vivek_gupta">Vivek Gupta</string>
    <string name="vvkkgupta21_gmail_com">vvkkgupta21@gmail.com</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="signup">Signup</string>
    <string name="user_name">user name</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="tap_to_generate_user_avatar">Tap to generate user avatar</string>
    <string name="generate_background_color">Generate Background Color</string>
    <string name="create_user">Create User</string>

</resources>