<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/purple500"
    android:gravity="bottom"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/navprofilepic"
        android:layout_width="70dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="49dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:layout_constraintBottom_toTopOf="@+id/navLoginbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profiledefault" />

    <ImageButton
        android:id="@+id/addchannelbtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/transparent"
        android:onClick="addChannelClicked"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/addchannelbutton" />

    <Button
        android:id="@+id/navLoginbtn"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="4dp"
        android:onClick="loginBtnNavClicked"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/navProfilename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="73dp"
        android:text="@string/vivek_gupta"
        app:layout_constraintStart_toEndOf="@+id/navprofilepic"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/navprofileid"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:text="@string/vvkkgupta21_gmail_com"
        app:layout_constraintStart_toEndOf="@+id/navprofilepic"
        app:layout_constraintTop_toBottomOf="@+id/navProfilename" />

</androidx.constraintlayout.widget.ConstraintLayout>